--- a/application/templates/homepage/squatlive.html
+++ b/application/templates/homepage/squatlive.html
@@ -81,11 +81,11 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
-          <span>제자리뛰기</span>
+          <span>덤밸숄더프레스</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">제자리뛰기 운동하기:</h6>
+            <h6 class="collapse-header">덤밸숄더프레스</h6>
             <a class="collapse-item" href="/runninglive">실시간촬영</a>
             <a class="collapse-item" href="/runningvideo">동영상 업로드</a>
             <!-- <a class="collapse-item" href="utilities-animation.html">Animations</a>
